# MedMetaExtractor

./: .gitignore  CMakeLists.txt  CMakeLists_simple.txt  LICENSE  README.md  READY_TO_TEST.md  build.bat  build.sh  compile_simple.bat  config.json  example_config.json  test.dcm  test_build.bat
cmake/: test_dcmtk.cpp
config/: clinical_profile.json  research_profile.json
src/: ConfigParser.cpp  ConfigParser.hpp  DicomReader.cpp  DicomReader.hpp  Logger.cpp  Logger.hpp  OutputFormatter.cpp  OutputFormatter.hpp  main.cpp  simple_main.cpp
